# secretonce

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml  package.json
.sqlx/: query-1984ae4a4f8da8f2958c09c292b6b9923414e6ad2034a86d09ce5177b7742131.json  query-202a4bea2491966ac9236454a3b9572c38ec8403b179655946c3b101fcc469d0.json  query-574a7357e238302b99d23b4c48eccf44a17567158ff4d1e4ae346ebfa7d752cc.json  query-ba7cb6dc5601e329f7824ec1e240404a9212fb89bd614e4f5fcd00165fa5df74.json  query-c143f3a101e4594f4b723f09004d61004b30486366524cee330e3a39e66322b3.json  query-cbef6f4b8f1f2c7f701d537dff97468a12396a47b9aea46334090f97996eec54.json  query-ce4190774cdec90c1920041a5e0c10365cd9fa1330180f0887d3896d64d9cde3.json  query-d55e986dd73b06389c6e82116eabf8da486cc320b3d3c70a545ee8a3944c0493.json  query-ddffb4e0cf823b9d1fa2b931a7e3c6b6abe995a925cf0b0e56da15352f38c270.json  query-e29151925170ff6de5946f8c0fc5846a16075a5049462e59b5ef51eea4d59928.json  query-e338fddfd51802a49b13e02f50b0267bf3ee2fbe30da1e3e41a5bd0b381179c1.json
configuration/: base.yaml  local.yaml  production.yaml
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js  index.js
migrations/: 20251026153022_secrets_table.sql  20251026153356_idx_secrets_expires_at.sql  20251026153446_idx_secrets_created_at.sql  20251026204752_add_default_created_at.sql  20251026210930_add_secret_key_in_secrets.sql  20251026220433_alter_table_secret_key.sql  20251031110009_remove_column_burn_after_reading_in_secrets.sql  20251031112031_remove_column_recipient_in_secrets.sql  20251101130523_remove_secret_key_from_secrets.sql  20251101130709_add_salt_to_secrets.sql  20251101131137_remove_passphrase_from_secrets.sql  20251101143117_remove_salt_from_secrets.sql
src/: config.rs  encryption.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  router.rs  state.rs
src/api/: handlers.rs
templates/: display_secret.html  index.html  passphrase_input_form.html
tests/: integration.rs
(+9 files in other folders)
