[package]
name = "secretonce"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
rand = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
base64 = "0.21"
anyhow = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "time", "uuid"] }
tokio-postgres = "0.7"
async-trait = "0.1.89"
dotenvy = "0.15.7"
config = "0.15.18"
log = "0.4.28"
serde-aux = "4.7.0"
generic-array = "1.3.5"
time = { version = "0.3.44", features = ["serde"] }
chacha20poly1305 = "0.10.1"

[dev-dependencies]
hyper = "1.7.0"
reqwest = { version = "0.11", features = ["json"] }
serde_test = "1.0"
tower = { version = "0.4", features = ["util"] }
